padding fix on mobile

--- a/src/features/layout/components/Content.css
+++ b/src/features/layout/components/Content.css
@@ -11,6 +11,12 @@
     gap: 1rem;
 }
 
+@media (max-width: 640px) {
+    .content {
+        padding: calc(var(--padding) / 2);
+    }
+}
+
 .content section {
     display: flex;
     flex-direction: column;
